--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!doctype html>
+<html lang="en">
 
-  </head>
-  <body>
-    
-  </body>
+<head>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title></title>
+
+  <!-- <link rel="stylesheet" href="css/main.css">
+  <link rel="icon" href="images/favicon.png"> -->
+</head>
+
+<body>
+
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="js/scripts.js"></script> -->
+</body>
+
 </html>
