--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-
+<!-- Div For Navigation Menu -->
   <div class="container-fluid">
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -50,7 +50,53 @@
       </div>
     </nav>
   </div>
+<!-- Div For Main Carousel -->
+  <div class="container-fluid">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <!-- indicators -->
+      <ol class="carousel-indicators">
+       <li data-target="#carouselExampleSlidesOnly" data-slide-to="0" class="active"></li>
+       <li data-target="#carouselExampleSlidesOnly" data-slide-to="1"></li>
+       <li data-target="#carouselExampleSlidesOnly" data-slide-to="2"></li>
+      </ol>
+      <!-- indicators -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" src="nature.jpg" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Heading</h5>
+            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="nature.jpg" alt="Second slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Heading</h5>
+            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="nature.jpg" alt="Third slide">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Heading</h5>
+            <p>There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain</p>
+          </div>
+        </div>
+      </div>
 
+      <!-- previous and next buttons -->
+      <a class="carousel-control-prev" href="#carouselExampleSlidesOnly" role="button" data-slide="prev">
+       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+       <span class="sr-only">Previous</span>
+     </a>
+     <a class="carousel-control-next" href="#carouselExampleSlidesOnly" role="button" data-slide="next">
+       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+       <span class="sr-only">Next</span>
+     </a>
+
+     <!-- end of next buttons  -->
+    </div>
+  </div>
   <!--bootstrap4 js cdn'  -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
