About Us Section
Ref:https://getbootstrap.com/docs/4.0/components/jumbotron/
Ref:https://getbootstrap.com/docs/4.0/components/card/

Components Used

1. Jumbotron
2. Card Decks

--- a/index.html
+++ b/index.html
@@ -97,6 +97,56 @@
      <!-- end of next buttons  -->
     </div>
   </div>
+<!-- About section -->
+  <div class="container-fluid">
+    <div class="jumbotron">
+      <h3 class="text-center font-weight-bold">Hello</h3>
+      <h1 class="display-4 text-center">We are Space</h1>
+        <!-- my means margin top and bottom with 4rem values -->
+      <hr class="my-4 w-25" >
+      <p class="lead text-justify mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+         exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+         Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt. </p>
+
+      <!-- Using Card Decks  -->
+
+      <div class="card-deck">
+        <div class="card">
+          <div class="card-body">
+             <h1 class="card-title display-1 text-center">200</h1>
+             <h3 class="card-subtitle mb-2 text-center">Workshops Done</h3>
+          </div>
+
+        </div>
+        <div class="card">
+          <div class="card-body">
+             <h1 class="card-title display-1 text-center">50</h1>
+             <h3 class="card-subtitle mb-2 text-center">Events Organized</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+             <h1 class="card-title display-1 text-center">80+</h1>
+             <h3 class="card-subtitle mb-2 text-center">Project Completed</h3>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+             <h1 class="card-title display-1 text-center">15</h1>
+             <h3 class="card-subtitle mb-2 text-center">Happy Partners</h3>
+          </div>
+        </div>
+      </div>
+
+      <!-- End of Card Decks -->
+    </div>
+  </div>
+
+<!-- End of About -->
+
+
   <!--bootstrap4 js cdn'  -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
