Technologies Section Added
Ref://

Activities Done

1. Section is Divided into a header row and three body rows
2. Necessary Data and Classes are added
3. Font awesome is added to include icons for the section.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title></title>
   <!--bootstrap4 css cdn  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
 </head>
 
 <body>
@@ -145,6 +146,147 @@
   </div>
 
 <!-- End of About -->
+
+<!-- Begining of Technologies -->
+<div class="container-fluid ">
+  <div class="row">
+    <div class="col">
+        <h4 class="text-center text-success "><strong>What We Do</strong></h4>
+        <div class="text-center col-md-8 offset-md-2">
+          <h1>We have got everything you need to launch and grow your business</h1>
+          <hr/>
+        </div>
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-6">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+          <div class="text-center text-success">
+              <i class="fa fa-camera fa-3x"></i>
+          </div>
+        </div>
+        <div class="col-md">
+          <h3 class="h2">Brand Identity</h3>
+          <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+          </p>
+        </div>
+      </div>
+      </div>
+
+    </div>
+    <div class="col-md-6">
+
+      <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+          <div class="text-center text-success">
+              <i class="fa fa-code fa-3x"></i>
+          </div>
+        </div>
+        <div class="col-md">
+          <h3 class="h2">Brand Identity</h3>
+          <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+          </p>
+        </div>
+      </div>
+      </div>
+
+
+    </div>
+
+  </div>
+
+  <div class="row tech-row">
+    <div class="col-md-6">
+
+      <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+          <div class="text-center text-success">
+              <i class="fa fa-cog fa-3x"></i>
+          </div>
+        </div>
+        <div class="col-md">
+          <h3 class="h2">Brand Identity</h3>
+          <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+          </p>
+        </div>
+      </div>
+      </div>
+
+    </div>
+    <div class="col-md-6">
+
+      <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+          <div class="text-center text-success">
+              <i class="fa fa-cloud fa-3x"></i>
+          </div>
+        </div>
+        <div class="col-md">
+          <h3 class="h2">Brand Identity</h3>
+          <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+          </p>
+        </div>
+      </div>
+      </div>
+
+    </div>
+
+  </div>
+
+  <div class="row tech-row">
+
+    <div class="col-md-6">
+      <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+          <div class="text-center text-success">
+              <i class="fa fa-camera fa-3x"></i>
+          </div>
+        </div>
+        <div class="col-md">
+          <h3 class="h2">Brand Identity</h3>
+          <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+          </p>
+        </div>
+      </div>
+      </div>
+
+    </div>
+    <div class="col-md-6">
+
+      <div class="container">
+        <div class="row">
+        <div class="col-md-2">
+          <div class="text-center text-success">
+              <i class="fa fa-code fa-3x"></i>
+          </div>
+        </div>
+        <div class="col-md">
+          <h3 class="h2">Brand Identity</h3>
+          <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis. Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+          </p>
+        </div>
+      </div>
+      </div>
+
+
+    </div>
+
+  </div>
+
+
+</div>
+
+
+
+<!-- End of technologies -->
 
 
   <!--bootstrap4 js cdn'  -->
