Big Update! Please take care
Ref: Bootstrap4 carousel and cards

Changes Made

1.Added Images To Project
2.Latest News Section
3.Used Jumbotron as fragment separator
4.Our clients and feedbacks section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <!--bootstrap4 css cdn  -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
+
+  <style>
+  /*overriding coloumns*/
+  .override-columns{
+    -moz-column-count:2;
+    /*need to add for other browsers*/
+  }
+
+  </style>
 </head>
 
 <body>
@@ -200,7 +209,7 @@
 
   </div>
 
-  <div class="row tech-row">
+  <div class="row">
     <div class="col-md-6">
 
       <div class="container">
@@ -240,7 +249,7 @@
 
   </div>
 
-  <div class="row tech-row">
+  <div class="row">
 
     <div class="col-md-6">
       <div class="container">
@@ -287,6 +296,274 @@
 
 
 <!-- End of technologies -->
+
+<!-- Beginining of Recent works -->
+<div class="container-fluid">
+
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h4 class="text-center text-success"><strong>Recent Projects</strong></h4>
+      <div class="text-center col-md-8 offset-md-2">
+        <h1>We love what we do, check out some of our latest works</h1>
+        <hr/>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+        <div class="col-md-8 offset-md-2">
+          <div class="card-columns override-columns" >
+            <div class="card">
+              <img class="card-img" src="projects/lady-shutterbug.jpg" alt="Card image">
+            </div>
+            <div class="card">
+              <img class="card-img" src="nature.jpg" alt="Card image">
+            </div>
+            <div class="card">
+              <img class="card-img" src="projects/palmeira.jpg" alt="Card image">
+            </div>
+            <div class="card">
+              <img class="card-img" src="projects/woodcraft.jpg" alt="Card image">
+            </div>
+            <div class="card">
+              <img class="card-img" src="projects/the-beetle.jpg" alt="Card image">
+            </div>
+            <div class="card">
+              <img class="card-img" src="nature.jpg" alt="Card image">
+            </div>
+          </div>
+
+
+        </div>
+
+
+    </div>
+  </div>
+
+  <div class="row">
+  </div>
+
+
+
+
+</div>
+
+<!--End of recent works -->
+
+<!--Beginning of Latest News  -->
+
+<div class="container-fluid">
+
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h4 class="text-center text-success"><strong>Latest News</strong></h4>
+      <div class="text-center col-md-8 offset-md-2">
+        <h1>Latest news updates from the team</h1>
+        <hr/>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div id="indicator2" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#indicator2" data-slide-to="0" class="active"></li>
+            <li data-target="#indicator2" data-slide-to="1"></li>
+            <li data-target="#indicator2" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <div class="card text-center">
+                <img class="card-img-top" src="nature.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text text-justify">With supporting text below as a natural lead-in to additional content.With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-outline-success">READ MORE..</a>
+                </div>
+                <div class="card-footer text-muted bg-dark text-right">
+                  2 days ago
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card text-center">
+                <img class="card-img-top" src="nature.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text text-justify">With supporting text below as a natural lead-in to additional content.With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-outline-success">READ MORE..</a>
+                </div>
+                <div class="card-footer text-muted bg-dark text-right">
+                  2 days ago
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <div class="card text-center">
+                <img class="card-img-top" src="nature.jpg" alt="Card image cap">
+                <div class="card-body">
+                  <h5 class="card-title">Special title treatment</h5>
+                  <p class="card-text text-justify">With supporting text below as a natural lead-in to additional content.With supporting text below as a natural lead-in to additional content.</p>
+                  <a href="#" class="btn btn-outline-success">READ MORE..</a>
+                </div>
+                <div class="card-footer text-muted bg-dark text-right">
+                  2 days ago
+                </div>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#indicator2" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#indicator2" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+    </div>
+  </div>
+</div>
+
+<!-- End of Latest News  -->
+
+<!-- Begining of our clients -->
+
+<div class="container-fluid">
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h4 class="text-center text-success"><strong>Our Clients</strong></h4>
+      <div class="text-center col-md-8 offset-md-2">
+        <h1>Space has been honored to partner up with these clients</h1>
+        <hr/>
+      </div>
+    </div>
+  </div>
+
+ <div class="row">
+   <div class="col-md-8 offset-md-2">
+     <div class="card-group">
+       <div class="card">
+         <img class="card-img-top" src="clients/dropbox.png" alt="Card image cap">
+       </div>
+       <div class="card">
+         <img class="card-img-top" src="clients/envato.png" alt="Card image cap">
+       </div>
+       <div class="card">
+         <img class="card-img-top" src="clients/firefox.png" alt="Card image cap">
+       </div>
+       <div class="card">
+         <img class="card-img-top" src="clients/joomla.png" alt="Card image cap">
+       </div>
+     </div>
+     <div class="card-group">
+       <div class="card">
+         <img class="card-img-top" src="clients/apple.png" alt="Card image cap">
+       </div>
+       <div class="card">
+         <img class="card-img-top" src="clients/atom.png" alt="Card image cap">
+       </div>
+       <div class="card">
+         <img class="card-img-top" src="clients/blackberry.png" alt="Card image cap">
+       </div>
+       <div class="card">
+
+       </div>
+     </div>
+   </div>
+
+ </div>
+
+
+ <div class="row my-5">
+
+   <div class="col-md-8 offset-md-2">
+     <div id="quote-carousel" class="carousel slide" data-ride="carousel">
+
+       <ol class="carousel-indicators">
+           <li data-target="#quote-carousel" data-slide-to="0" class="active"><img class="img-responsive " src="https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg" alt="">
+           </li>
+           <li data-target="#quote-carousel" data-slide-to="1"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/rssems/128.jpg" alt="">
+           </li>
+           <li data-target="#quote-carousel" data-slide-to="2"><img class="img-responsive" src="https://s3.amazonaws.com/uifaces/faces/twitter/adellecharles/128.jpg" alt="">
+           </li>
+       </ol>
+
+
+
+       <div class="carousel-inner text-center">
+
+
+
+         <div class="carousel-item active">
+
+           <div class="card text-white bg-info">
+            <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p class="quotation-mark"><i class="fa fa-quote-left" aria-hidden="true"></i></p>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante</p>
+             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+            </blockquote>
+            </div>
+            </div>
+
+         </div>
+         <!-- Quote 2 -->
+         <div class="carousel-item">
+           <div class="card text-white bg-info">
+            <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p class="quotation-mark"><i class="fa fa-quote-left" aria-hidden="true"></i></p>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.
+             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
+           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante</p>
+             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+            </blockquote>
+            </div>
+            </div>
+
+         </div>
+         <!-- Quote 3 -->
+         <div class="carousel-item">
+           <div class="card text-white bg-info">
+            <div class="card-body">
+            <blockquote class="blockquote mb-0">
+              <p class="quotation-mark"><i class="fa fa-quote-left" aria-hidden="true"></i></p>
+             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante
+               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+             <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+            </blockquote>
+            </div>
+            </div>
+
+         </div>
+
+
+       </div>
+       <a class="carousel-control-prev" href="#quote-carousel" data-slide="prev">
+         <span class="carousel-control-prev-icon"></span>
+       </a>
+       <a class="carousel-control-next" href="#quote-carousel" data-slide="next">
+         <span class="carousel-control-next-icon"></span>
+       </a>
+
+     </div>
+
+   </div>
+
+   </div>
+
+</div>
+
+
+<!--End of our clients -->
 
 
   <!--bootstrap4 js cdn'  -->
