Our team Basic Layout
Ref: bootstrapv4 card deck

Activities Done

1.jumbotron added at top
2.two rows to 3 cards each
3.Each card with image,title,subtitle and link
4.row margin for the separation

--- a/index.html
+++ b/index.html
@@ -565,6 +565,100 @@
 
 <!--End of our clients -->
 
+<div class="container-fluid">
+
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h4 class="text-center text-success"><strong>Who we all are</strong></h4>
+      <div class="text-center col-md-8 offset-md-2">
+        <h1>We are having a great team here...</h1>
+        <hr/>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+
+    <div class="col-md-8 offset-md-2">
+
+      <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="avatars/user-01.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">fname lname</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+            <a href="#" class="card-link">View Profile</a>
+            <a href="#" class="card-link">GitLab</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="avatars/user-02.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">fname lname</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+            <a href="#" class="card-link">View Profile</a>
+            <a href="#" class="card-link">GitLab</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="avatars/user-03.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">fname lname</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+            <a href="#" class="card-link">View Profile</a>
+            <a href="#" class="card-link">GitLab</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+  <div class="row my-5">
+
+    <div class="col-md-8 offset-md-2">
+
+      <div class="card-deck">
+        <div class="card">
+          <img class="card-img-top" src="avatars/user-04.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">fname lname</h5>
+             <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+             <a href="#" class="card-link">View Profile</a>
+             <a href="#" class="card-link">GitLab</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="avatars/user-05.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">fname lname</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+            <a href="#" class="card-link">View Profile</a>
+            <a href="#" class="card-link">GitLab</a>
+          </div>
+        </div>
+        <div class="card">
+          <img class="card-img-top" src="avatars/user-03.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">fname lname</h5>
+            <h6 class="card-subtitle mb-2 text-muted">Software Engineer</h6>
+            <a href="#" class="card-link">View Profile</a>
+            <a href="#" class="card-link">GitLab</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
+  </div>
+
+
+
+</div>
+
 
   <!--bootstrap4 js cdn'  -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
