--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
 
 <!--End of our clients -->
 
+<!-- Begining of our team -->
 <div class="container-fluid">
 
   <div class="jumbotron jumbotron-fluid">
@@ -613,10 +614,7 @@
 
     </div>
 
-
-  </div>
-
-  <div class="row my-5">
+    <div class="w-100 mb-5"></div>
 
     <div class="col-md-8 offset-md-2">
 
@@ -657,9 +655,160 @@
 
 
 
+
+</div>
+<!-- End of our team -->
+
+<div class="container-fluid my-5">
+
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h4 class="text-center text-success"><strong>Reach Us</strong></h4>
+      <div class="text-center col-md-8 offset-md-2">
+        <h1>We are always happy to support...</h1>
+        <hr/>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-8 offset-md-2">
+      <div class="row card-deck">
+        <div class="card">
+          <div class="card-header">
+             Post Your Query
+           </div>
+                    <form class="card-body">
+                      <fieldset>
+                        <div class="form-group">
+                          <input type="text" class="form-control" id="" placeholder="Your Name" />
+                        </div>
+                        <div class="form-group">
+                          <input type="email" class="form-control" id="" placeholder="name@example.com">
+                        </div>
+                        <div class="form-group">
+                          <input type="text" class="form-control" id="" placeholder="Subject" />
+                        </div>
+                        <div class="form-group">
+                         <textarea class="form-control" rows="5" id="comment"> Your message goes here</textarea>
+                        </div>
+
+                        <div class="form-group">
+                          <div class="w-100">
+                            <button type="submit" class="btn btn-success btn-block">send message</button>
+                          </div>
+                        </div>
+                      </fieldset>
+
+                    </form>
+        </div>
+        <div class="card ">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">
+                <h5 class="text-success">Find Us @:</h5>
+                <p class="text-justify">
+                    1600 Amphitheatre Parkway
+                    <br> Mountain View, CA
+                    <br> 94043 US
+                </p>
+              </li>
+              <li class="list-group-item">
+                <h5 class="text-success">Email Us @:</h5>
+                <p>
+                    contact@glintsite.com
+                    <br> info@glintsite.com
+                </p>
+              </li>
+              <li class="list-group-item">
+                <h5 class="text-success">Call Us @:</h5>
+                <p>
+                    Phone: (+63) 555 1212
+                    <br> Mobile: (+63) 555 0100
+                    <br> Fax: (+63) 555 0101
+                </p>
+
+              </li>
+
+              <li class="list-group-item">
+                <a href="#" class="card-link">GitLab</a>
+                <a href="#" class="card-link">Twitter</a>
+                <a href="#" class="card-link">Flickr</a>
+                <a href="#" class="card-link">Instagram</a>
+              </li>
+            </ul>
+        </div>
+      </div>
+
+    </div>
+
+  </div>
+
 </div>
 
+<!--Contact Us -->
 
+
+<!--Begining of Footer  -->
+<div class="container-fluid">
+
+
+
+  <div class="card-group text-white text-justify">
+    <div class="card  bg-dark">
+      <div class="card-body">
+        <h5 class="card-title">Mission</h5>
+        <blockquote class="blockquote"><p class="card-text">Promoting free knowledge and free technology across society to help build a free world and a better tomorrow. </p></blockquote>
+      </div>
+    </div>
+    <div class="card bg-dark">
+      <div class="card-body">
+        <h5 class="card-title">Vision</h5>
+        <p class="card-text"> <ul class="list-unstyled">
+          <li>A Free world : Where knowledge is free</li>
+          <li>Where the mind is without fear and the head is held high</li>
+          <li>Where the world has not been broken up into fragments
+          by narrow domestic walls.</li> </ul></p>
+      </div>
+
+    </div>
+    <div class="card bg-dark">
+      <div class="card-body">
+        <h5 class="card-title">Stay Connected</h5>
+        <p class="card-text">Subscribe to our mailing list and thereby receive our newsletter, updates and much more...</p>
+
+        <form class="form-inline">
+          <div class="form-group mx-sm-3">
+            <input type="password" class="form-control" id="inputPassword2" placeholder="Email">
+          </div>
+          <button type="submit" class="btn btn-success">Subscribe</button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="card text-white bg-dark">
+
+  <div class="card-body row ">
+
+    <div class="col">
+      <a href="#" class="card-link text-secondary">Quick Links:</a>
+       <a href="#" class="card-link text-info">HackerSpace</a>
+       <a href="#" class="card-link text-info">Insight</a>
+       <a href="#" class="card-link text-info">Free Electron</a>
+       <a href="#" class="card-link text-info">Blog</a>
+       <a href="#" class="card-link text-info">Gallery</a>
+       <a href="#" class="card-link text-info">Login</a>
+       &nbsp;&nbsp; |&nbsp;&nbsp; Registered Non Profit Organization
+        &nbsp;&nbsp;  |&nbsp;&nbsp; All Rights Reversed &copy; SPACE-KERALA
+     </div>
+
+</div>
+  </div>
+</div>
+</div>
+<!-- End of footer  -->
+
+<!-- End of contact us -->
   <!--bootstrap4 js cdn'  -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
